project set and running correctly with docker

--- a/my-to-do/package.json
+++ b/my-to-do/package.json
@@ -1,10 +1,11 @@
 {
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
-  },
+  "dev": "next dev",
+  "build": "next build",
+  "start": "next start",
+  "lint": "next lint"
+},
   "dependencies": {
     "mongodb": "^6.19.0",
     "next": "latest",
